force-app/main/default/objects/Lead/fields/Last_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Date__c</fullName>
    <label>Last Touch Date</label>
    <type>DateTime</type>
</CustomField>