force-app/main/default/objects/Lead/fields/Last_Touch_Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Lead_Channel__c</fullName>
    <label>Last Touch Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>