force-app/main/default/objects/Lead/validationRules/Inbound_Google_PPC_SEO_Last.validationRule-meta.xml
<ValidationRule>
    <fullName>Inbound_Google_PPC_SEO_Last</fullName>
    <active>true</active>
    <description>When Last Touch Source is Inbound and Channel is Google, Detail must be PPC or SEO</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Last_Touch_Lead_Source__c, &quot;Inbound&quot;),
    ISPICKVAL(Last_Touch_Lead_Channel__c, &quot;Google&quot;),
    NOT(OR(
        ISPICKVAL(Last_Touch_Lead_Channel_Detail__c, &quot;PPC&quot;),
        ISPICKVAL(Last_Touch_Lead_Channel_Detail__c, &quot;SEO&quot;)
    ))
)</errorConditionFormula>
    <errorMessage>When channel is Google (Inbound), detail must be PPC or SEO.</errorMessage>
</ValidationRule>