force-app/main/default/objects/Lead/validationRules/Inbound_No_Outbound_Ch_Last.validationRule-meta.xml
<ValidationRule>
    <fullName>Inbound_No_Outbound_Ch_Last</fullName>
    <active>true</active>
    <description>Prevents inbound attribution from using outbound-only channels (ZoomInfo, Apollo, Outreach) for Last Touch</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Last_Touch_Lead_Source__c, &quot;Inbound&quot;),
    OR(
        ISPICKVAL(Last_Touch_Lead_Channel__c, &quot;ZoomInfo&quot;),
        ISPICKVAL(Last_Touch_Lead_Channel__c, &quot;Apollo&quot;),
        ISPICKVAL(Last_Touch_Lead_Channel__c, &quot;Outreach&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Inbound attribution cannot use outbound channels (ZoomInfo/Apollo/Outreach).</errorMessage>
</ValidationRule>